tst: rewrite test because of new Panen model