@@ -8,10 +8,8 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Iterator;
-import java.util.List;
+import java.time.LocalDate;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -26,20 +24,16 @@ public class PanenRepositoryTest {
     @Test
     void testCreateAndFind() {
         Panen panen = new Panen();
-        List<String> fotos = new ArrayList<>();
-        fotos.add("foto_depan.jpg");
-        fotos.add("foto_samping.png");
-        panen.setId(1);
-        panen.setBuruhId(105);
-        panen.setKuantitas(50);
-        panen.setBuktiFoto(fotos);
-        panen.setTanggalMulai(1704067200); // Unix timestamp format
-        panen.setTanggalAkhir(1704153600);
-        panen.setTanggalPanen(1704240000);
-        panen.setStatus(StatusPanen.APPROVED);
-        panenRepository.createPanen(panen);
+        panen.setBuruhId(UUID.fromString("11111111-1111-1111-1111-111111111111"));
+        panen.setKuantitas(150);
+        panen.setBuktiFoto(List.of("foto_kebun_pagi.jpg"));
+        panen.setTanggalMulai(LocalDate.of(2026, 2, 18));
+        panen.setTanggalAkhir(null); // Still ongoing, hasn't finished yet
+        panen.setTanggalPanen(null);
+        panen.setStatus(StatusPanen.REPORTED);
+        panenRepository.save(panen);
 
-        Iterator<Panen> panenIterator = panenRepository.findAll();
+        Iterator<Panen> panenIterator = panenRepository.findAll().iterator();
         assertTrue(panenIterator.hasNext());
 
         Panen savedPanen = panenIterator.next();
@@ -50,41 +44,33 @@ public class PanenRepositoryTest {
 
     @Test
     void testFindAllIfEmpty() {
-        Iterator<Panen> panenIterator = panenRepository.findAll();
+        Iterator<Panen> panenIterator = panenRepository.findAll().iterator();
         assertFalse(panenIterator.hasNext());
     }
 
     @Test
     void testFindAllIfMoreThanOne() {
         Panen panen1 = new Panen();
-        panen1.setId(9000);
-        panen1.setBuruhId(1);
-        panen1.setKuantitas(1080);
-        panen1.setBuktiFoto(Arrays.asList(
-                "selfie_with_giant_tomato.jpg",
-                "harvest_visible_from_space.png"
-        ));
-        panen1.setTanggalMulai(1770000000);
-        panen1.setTanggalAkhir(1770086400);
-        panen1.setTanggalPanen(1770172800);
+        panen1.setBuruhId(UUID.fromString("22222222-2222-2222-2222-222222222222"));
+        panen1.setKuantitas(500);
+        panen1.setBuktiFoto(List.of("bukti_1.png", "bukti_2.png"));
+        panen1.setTanggalMulai(LocalDate.of(2026, 2, 15));
+        panen1.setTanggalAkhir(LocalDate.of(2026, 2, 17));
+        panen1.setTanggalPanen(LocalDate.of(2026, 2, 17));
         panen1.setStatus(StatusPanen.APPROVED);
-        panenRepository.createPanen(panen1);
+        panenRepository.save(panen1);
 
         Panen panen2 = new Panen();
-        panen2.setId(404);
-        panen2.setBuruhId(13);
-        panen2.setKuantitas(5);
-        panen2.setBuktiFoto(Arrays.asList(
-                "blurry_thumb.jpg",
-                "just_a_picture_of_dirt.png",
-                "crying_emoji_screenshot.jpeg"
-        ));
-        panen2.setTanggalMulai(1770172800);
-        panen2.setTanggalPanen(1770000000);
+        panen2.setBuruhId(UUID.fromString("33333333-3333-3333-3333-333333333333"));
+        panen2.setKuantitas(0);
+        panen2.setBuktiFoto(List.of("blur_pic.jpg"));
+        panen2.setTanggalMulai(LocalDate.of(2026, 2, 19));
+        panen2.setTanggalAkhir(LocalDate.of(2026, 2, 19));
+        panen2.setTanggalPanen(null); // Never harvested because it was rejected
         panen2.setStatus(StatusPanen.REJECTED);
-        panenRepository.createPanen(panen2);
+        panenRepository.save(panen2);
 
-        Iterator<Panen> panenIterator = panenRepository.findAll();
+        Iterator<Panen> panenIterator = panenRepository.findAll().iterator();
         assertTrue(panenIterator.hasNext());
 
         Panen savedPanen = panenIterator.next();
